First Briefing: 1월 24일자 리포트 발행

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,19 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
-  "typescript.enablePromptUseWorkspaceTsdk": true
+  "typescript.enablePromptUseWorkspaceTsdk": true,
+  "cSpell.words": [
+    "CFTC",
+    "Dominence",
+    "dotenv",
+    "FOMC",
+    "genai",
+    "Grayscale",
+    "Neue",
+    "Oikonomos",
+    "tavily"
+  ],
+  "python.defaultInterpreterPath": "./automation/venv/Scripts/python.exe",
+  "python.analysis.extraPaths": [
+    "./automation"
+  ]
 }
