--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,18 @@ yarn-error.log*
 
 # Contentlayer
 .contentlayer
+
+# ---------------------------------
+# Python Automation Bot Rules (Added)
+# ---------------------------------
+
+# 파이썬 가상환경 (절대 올리면 안 됨)
+venv/
+automation/venv/
+
+# 파이썬 캐시 파일 (불필요한 쓰레기)
+__pycache__/
+*.pyc
+
+# 파이썬용 환경변수 파일 (보안 중요)
+.env
